--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         };
 
         jQuery.get('/wiki/input.md', function(data) {
-            alert(data);
+            addPage(data);
         });
 
     </script>
