--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     '</a>' +
                 '<div class="collapse" id="' + name + '">' +
                     content +
-                '</div>'
+                '</div>' +
+                '<hr>'
             );
         };
 
