--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                 name: 'input',
                 label: 'Pola formularza'
             },
+            {
+                name: 'column',
+                label: 'Kolumny tabeli'
+            },
         ];
 
         loadPage(files);
