--- a/index.html
+++ b/index.html
@@ -22,20 +22,39 @@
     <style>
         body {
             font-family: 'Lato';
+            background-color: #f5f5f5;
+        }
+
+        pre {
+            border: 3px solid #fff;
+            background-color: #eee;
+            /*color: #000;*/
+        }
+
+        img {
+            width: 100%;
+            border-radius: 3px;
+        }
+
+        code {
+            background-color: #fff;
+            color: #000;
         }
 
         h1 {
             background-color: #66ABCC;
             color: #fff;
-            padding: 5px 10px;
-            font-size: 20px;
-            border-radius: 2px;
+            text-shadow: 0px 1px 4px #666666;
+            padding: 10px 20px;
+            font-size: 18px;
+            border-radius: 3px;
+            margin-left: -20px;
         }
 
         hr {
             border: 0;
             height: 2px;
-            background-color: #66ABCC;
+            background-color: #fff;
             border-radius: 2px;
         }
 
@@ -43,6 +62,7 @@
             margin-left: 30%;
             padding: 20px;
             padding-right: 10%;
+            padding-left: 40px;
         }
 
         .section {
