--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <body>
     <div class="sidenav">
-        <h1>CrudeCRUD</h1>
+        <h1>CrudeCRUD 1.0.79</h1>
         <hr>
         <div id="menu"></div>
         <small>Jan Dolata for HolonGlobe</small>
@@ -151,7 +151,8 @@
             'first_steps',
             'interfaces',
             'api',
-            'style'
+            'style',
+            'packages'
         ],
         'files',
         'Start');
@@ -172,9 +173,15 @@
         'wiki/en/setup/',
         [
             'column',
+            'form_attributes',
             'inputs',
+            'custom_input',
+            'column_formats',
+            'custom_column_formats',
             'filters',
             'trans',
+            'model_defaults',
+            'custom_action',
             'module_in_popups'
         ],
         'setup',
