--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
             'prepare_list',
             'store_update',
             'permissions',
-            'ordered_list'
+            'ordered_list',
+            'validation'
         ],
         'with_model',
         'Work with model');
