--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
         <small>Jan Dolata for HolonGlobe</small>
     </div>
 
-    <div id="content" class="content"></div>
+    <div id="content" class="content">
+        <div class="pull-right" style="font-size: 25px">
+            <img src="icon.png" style="width: 100px; height: 100" />
+        </div>
+    </div>
 </body>
 
 <script type="text/javascript">
