--- a/index-pl.html
+++ b/index-pl.html
@@ -107,7 +107,7 @@
 <body>
     <div class="sidenav">
         <h1>CrudeCRUD 1.0.79</h1>
-        <a href="/index-pl.html">PL</a>
+        <a href="/">EN</a>
         <hr>
         <div id="menu"></div>
         <small>Jan Dolata for HolonGlobe</small>
@@ -153,7 +153,7 @@
     };
 
     fill(
-        'wiki/en/',
+        'wiki/pl/',
         [
             'install',
             'first_steps',
@@ -166,7 +166,7 @@
         'Start');
 
     fill(
-        'wiki/en/with_model/',
+        'wiki/pl/with_model/',
         [
             'traits',
             'prepare_list',
@@ -176,10 +176,10 @@
             'validation'
         ],
         'with_model',
-        'Work with model');
+        'Praca z modelem');
 
     fill(
-        'wiki/en/setup/',
+        'wiki/pl/setup/',
         [
             'column',
             'form_attributes',
@@ -194,10 +194,10 @@
             'module_in_popups'
         ],
         'setup',
-        'Setup');
+        'Ustawienia listy');
 
     fill(
-        'wiki/en/helpers/',
+        'wiki/pl/helpers/',
         [
             'crude_data',
             'crude_files',
@@ -205,18 +205,18 @@
             'query_helper'
         ],
         'helpers',
-        'Helpers'
+        'Metody pomocnicze'
     );
 
     fill(
-        'wiki/en/examples/',
+        'wiki/pl/examples/',
         [
             'autocomplete',
             'ordered_list',
             'pre_filtered_collection'
         ],
         'examples',
-        'Examples'
+        'Przykłady (z wersji angielskiej)'
     );
 
 </script>
