--- a/index.html
+++ b/index.html
@@ -22,86 +22,7 @@
     <script src="node_modules/markdown-it/dist/markdown-it.min.js"></script>
     <script src="node_modules/js-markdown-extra/js-markdown-extra.js"></script>
 
-    <style>
-        body {
-            font-family: 'Lato';
-            background-color: #f5f5f5;
-        }
-
-        pre {
-            border: 3px solid #fff;
-            background-color: #eee;
-            /*color: #000;*/
-        }
-
-        img {
-            width: 100%;
-            border-radius: 3px;
-        }
-
-        code {
-            background-color: #fff;
-            color: #000;
-        }
-
-        h1 {
-            background-color: #66ABCC;
-            color: #fff;
-            text-shadow: 0px 1px 4px #666666;
-            padding: 10px 20px;
-            font-size: 18px;
-            border-radius: 3px;
-            margin-left: -20px;
-        }
-
-        hr {
-            border: 0;
-            height: 2px;
-            background-color: #fff;
-            border-radius: 2px;
-        }
-
-        .content {
-            margin-left: 30%;
-            padding: 20px;
-            padding-right: 10%;
-            padding-left: 40px;
-        }
-
-        .section {
-            padding-top: 20px;
-        }
-
-        .sidenav {
-            width: 30%;
-
-            position: fixed;
-            overflow-y: scroll;
-
-            top: 20px;
-            bottom: 20px;
-
-            left: 0;
-            text-align: right;
-
-            padding-left: 10%;
-            padding-right: 20px;
-        }
-
-        ::-webkit-scrollbar {
-            width: 8px;
-            height: 8px;
-        }
-        ::-webkit-scrollbar-button {
-            background: #ddd
-        }
-        ::-webkit-scrollbar-track-piece {
-            background: #eee
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #66ABCC
-        }​
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
