--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700">
 
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="docs/bootstrap.css">
 
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="node_modules/markdown-it/dist/markdown-it.min.js"></script>
-    <script src="node_modules/js-markdown-extra/js-markdown-extra.js"></script>
+    <script src="docs/jquery.js"></script>
+    <script src="docs/bootstrap.js"></script>
+    <script src="docs/markdown-it.min.js"></script>
+    <script src="docs/js-markdown-extra.js"></script>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -36,7 +36,7 @@
 
     <div id="content" class="content">
         <div class="pull-right" style="font-size: 25px">
-            <img src="icon.png" style="width: 100px; height: 100" />
+            <img src="icon.png" class="icon" />
         </div>
     </div>
 </body>
