--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             'trans',
             'model_defaults',
             'custom_action',
-            'module_in_popups'
+            'module_in_popups',
+            'default_sort'
         ],
         'setup',
         'Setup');
