--- a/index-pl.html
+++ b/index-pl.html
@@ -81,7 +81,8 @@
             'trans',
             'model_defaults',
             'custom_action',
-            'module_in_popups'
+            'module_in_popups',
+            'default_sort'
         ],
         'setup',
         'Ustawienia listy');
