--- a/index-pl.html
+++ b/index-pl.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="sidenav">
-        <h1>CrudeCRUD 1.0.79</h1>
+        <h1>CrudeCRUD (v1.0.110)</h1>
         <a href="/">EN</a>
         <hr>
         <div id="menu"></div>
