trans, rich filters (pl)

--- a/index-pl.html
+++ b/index-pl.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="sidenav">
-        <h1>CrudeCRUD (v1.0.110)</h1>
+        <h1>CrudeCRUD (v1.0.113)</h1>
         <a href="/">EN</a>
         <hr>
         <div id="menu"></div>
@@ -78,6 +78,7 @@
             'column_formats',
             'custom_column_formats',
             'filters',
+            'rich_filters',
             'trans',
             'model_defaults',
             'custom_action',
