interfaceTrans for pl

--- a/index-pl.html
+++ b/index-pl.html
@@ -79,7 +79,9 @@
             'custom_column_formats',
             'filters',
             'rich_filters',
+            'title_description',
             'trans',
+            'interface_trans',
             'model_defaults',
             'custom_action',
             'module_in_popups',
