--- a/index-pl.html
+++ b/index-pl.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="sidenav">
-        <h1>CrudeCRUD (v1.0.113)</h1>
+        <h1>CrudeCRUD (v1.0.125)</h1>
         <a href="/">EN</a>
         <hr>
         <div id="menu"></div>
@@ -67,6 +67,17 @@
         ],
         'with_model',
         'Praca z modelem');
+
+    fill(
+        'wiki/pl/modules/',
+        [
+            'form',
+            'files',
+            'map',
+            'thumnails'
+        ],
+        'modules',
+        'Moduły');
 
     fill(
         'wiki/pl/setup/',
