--- a/index-pl.html
+++ b/index-pl.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="sidenav">
-        <h1>CrudeCRUD (v1.0.125)</h1>
+        <h1>CrudeCRUD (v1.1.*)</h1>
         <a href="/">EN</a>
         <hr>
         <div id="menu"></div>
@@ -50,7 +50,8 @@
             'interfaces',
             'api',
             'style',
-            'packages'
+            'packages',
+            'upgrade-1_0-1_1'
         ],
         'files',
         'Start');
@@ -104,6 +105,7 @@
     fill(
         'wiki/pl/helpers/',
         [
+            'crude_magic',
             'crude_data',
             'crude_files',
             'crude_options',
