pl/extra_column and fixes in pl/rich_filters

--- a/index-pl.html
+++ b/index-pl.html
@@ -89,6 +89,7 @@
             'custom_input',
             'column_formats',
             'custom_column_formats',
+            'extra_column',
             'filters',
             'rich_filters',
             'title_description',
