pl special files

--- a/index-pl.html
+++ b/index-pl.html
@@ -110,7 +110,8 @@
             'crude_data',
             'crude_files',
             'crude_options',
-            'query_helper'
+            'query_helper',
+            'crude_special_files'
         ],
         'helpers',
         'Metody pomocnicze'
