--- a/index-pl.html
+++ b/index-pl.html
@@ -75,7 +75,8 @@
             'form',
             'files',
             'map',
-            'thumnails'
+            'thumnails',
+            'micro_edit'
         ],
         'modules',
         'Moduły');
